# real-backend

./: .env  .env.example  .gitignore  Dockerfile  README.md  main.py  nixpacks.toml  pyproject.toml  pytest.ini  test.db
.github/workflows/: cd.yml  ci.yml  main.yml
src/: app.py  config.py  database.py
src/routes/: __init__.py
src/routes/auth/: models.py  operations.py  views.py
src/routes/brands/: models.py  operations.py  views.py
src/routes/categories/: models.py  operations.py  views.py
src/routes/customers/: models.py  operations.py  views.py
src/routes/products/: models.py  operations.py  views.py
src/routes/providers/: models.py  operations.py  views.py
src/routes/sales/: link_models.py  models.py  operations.py  views.py
tests/: README.md  conftest.py  test_app.py  test_auth_endpoints.py  test_auth_operations.py  test_categories.py  test_database.py  test_other_endpoints.py  test_products.py  test_sales.py
