[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary,pool]>=3.2.3",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.19",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.33.0",
]
